--- a/em-rem/style.css
+++ b/em-rem/style.css
@@ -1,11 +1,23 @@
+html {
+  /* bazinis font size - 10px */
+  /* 1em arba 1rem - 10px */
+  font-size: 62.5%;
+}
+p {
+  font-size: 1.6rem;
+}
+
 h1 {
   font-weight: normal;
   font-size: 35px;
-  margin-bottom: 10px;
+  font-size: 3.5rem;
+  /* margin-bottom: 10px; */
+  margin-bottom: 0.5em;
 }
 
 .art {
   margin-bottom: 30px;
+  margin-bottom: 2rem;
   border-bottom: 1px solid #000;
 }
 
@@ -18,18 +30,51 @@ h1 {
 }
 .articleTitle {
   margin-bottom: 10px;
+  margin-bottom: 0.7em;
 }
 
 .articleText {
   color: rgba(0, 0, 0, 0.6);
   margin-bottom: 20px;
 }
-
+.notEm {
+  /* font-size: 3em; */
+}
+/* em vienetai dauginasi jei yra vieni elementai kituose ir
+visi turi nustatytus dydziu em ais
+*/
+.notEm .articleText {
+  /* font-size: 2em; */
+}
 .articleBtn {
   margin-bottom: 10px;
   padding: 6px 16px;
   font-size: 16px;
+  margin-right: 1.5rem;
+}
+.btnEm {
+  padding: 0.39em 1em;
 }
 
 @media screen and (min-width: 768px) {
+  html {
+    font-size: 25px;
+  }
+  .articleText {
+    font-size: 16px;
+  }
+  h1 {
+    font-size: 80px;
+  }
+  .artImg {
+    max-height: 350px;
+  }
+  .articleTitle {
+    font-size: 45px;
+    font-weight: normal;
+    /* margin-left: -1px; */
+  }
+  .articleBtn {
+    font-size: 30px;
+  }
 }
