--- a/our-team/style.css
+++ b/our-team/style.css
@@ -48,3 +48,27 @@
 .carImgContainer:hover .sidebar {
   left: 0;
 }
+
+.inputBlock label {
+  display: block;
+  font-size: 16px;
+}
+
+.textInput {
+  width: 100%;
+  border: 1px solid #000;
+  border-radius: 15px;
+  padding: 0.2em 0.5em;
+  font-size: 16px;
+}
+
+@media screen and (min-width: 600px) {
+  .formEl {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+  .twoCol {
+    grid-column: span 2;
+  }
+}
